# splat

./: .gitignore  CHANGES  CMakeLists.txt  Makefile  README  README.md  README_VisualStudio.md  Splat.vcxproj  VisualStudio_Notes.txt  build  clean  configure  fontdata.h  foobar.txt  install  itwom3.0.c  itwom3.0.cpp  performance.txt  splat-1.4.0.lsm  splat.cpp  workqueue.hpp
docs/: CMakeLists.txt
docs/english/: CMakeLists.txt
docs/english/man/: splat.1  splat.man
docs/english/postscript/: splat.ps
docs/english/text/: .splat.txt.swp  splat.txt
docs/spanish/: CMakeLists.txt
docs/spanish/man/: splat.1  splat.man
docs/spanish/postscript/: splat.ps
docs/spanish/text/: splat.txt
src/: CMakeLists.txt  itwom3.0.c  splat.cpp
test/: runtests.py
test/srtm3/: 40_41_110_111.sdf.bz2  40_41_111_112.sdf.bz2  40_41_112_113.sdf.bz2  41_42_110_111.sdf.bz2  41_42_111_112.sdf.bz2  41_42_112_113.sdf.bz2
test/tests/coverage_1deg_15mi_itm/: __init__.py  tx-site_report_142.txt
test/tests/coverage_1deg_15mi_itwom/: __init__.py  tx.lcf
test/tests/coverage_3deg_30mi_itm/: __init__.py  tx-site_report_142.txt  tx.lrp
test/tests/coverage_3deg_30mi_itwom/: __init__.py  tx.lrp
test/tests/p2p_imperial/: __init__.py  rx.qth  tx-to-rx_142.txt
test/tests/p2p_imperial_los/: __init__.py  rx.qth  tx-to-rx_142.txt  tx.lrp  tx.qth
test/utils/: __init__.py
utils/: CMakeLists.txt  Makefile  README  bearing.c  build  citydecoder.c  compare_ano.pl  compare_ano.py  fontdata.c  sdf2sdf.sh  srtm2sdf.c  usgs2sdf.c
vstudio/: Splat.sln  Splat.vcxproj  bearing.vcxproj  buildVS2015.bat  citydecoder.vcxproj  srtm2sdf.vcxproj  usgs2sdf.vcxproj
windows/lib/: bzip2.lib  zlib.lib
windows/x64_lib/: libpng16.lib
